# predicting-sampling-advantage-ising-machines-quantum-simulations

./: .gitignore  CITATION.bib  CITATION.cff  Makefile  Project.toml  README.md  env.yml  pyproject.toml  requirements-apr24-Python-3.10.12.txt  requirements.txt
models/: all_weights_converted.tsv
models/modified_RBM_high_model_id=0/: 100_16_output.json  100_16_weights.txt  144_16_output.json  144_16_weights.txt  144_8_output.json  144_8_weights.txt  16_16_output.json  16_16_weights.txt  196_16_output.json  196_16_weights.txt  196_8_output.json  196_8_weights.txt  256_2_output.json  256_2_weights.txt  256_3_output.json  256_3_weights.txt  256_4_output.json  256_4_weights.txt  256_8_output.json  256_8_weights.txt  324_2_output.json  324_2_weights.txt  324_3_output.json  324_3_weights.txt  324_4_output.json  324_4_weights.txt  324_8_output.json  324_8_weights.txt  36_16_output.json  36_16_weights.txt  400_2_output.json  400_2_weights.txt  400_3_output.json  400_3_weights.txt  400_4_output.json  400_4_weights.txt  400_8_output.json  400_8_weights.txt  484_2_output.json  484_2_weights.txt  (+13 more)
models/modified_RBM_high_model_id=1/: 100_16_output.json  100_16_weights.txt  144_16_output.json  144_16_weights.txt  144_8_output.json  144_8_weights.txt  16_16_output.json  16_16_weights.txt  196_16_output.json  196_16_weights.txt  196_8_output.json  196_8_weights.txt  256_2_output.json  256_2_weights.txt  256_3_output.json  256_3_weights.txt  256_4_output.json  256_4_weights.txt  256_8_output.json  256_8_weights.txt  (+26 more)
ultrafast_full_boltzmann_machine/: __init__.py  isingweights.py
(+533 files in other folders)
