[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ultrafast_full_boltzmann_machine"
version = "0.0.1"
description = "Full Boltzmann Machine Monte Carlo for the Restricted Boltzmann Machine"
authors = [
  { name = "R.J.L.F Berns, J.H. Mentink" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ultrafast_full_boltzmann_machine"]
force_sort_within_sections = true
